EXTRA_DIST = \
	po/POTFILES.in \
	scripts/check_kvsynopd.sh \
	scripts/kvsynopdbadmin.sh \
	changelog \
	compat \
	control \
	copyright \
	dirs \
	docs \
	files \
	kvalobs.default \
	kvalobs.substvars \
	kvsynopd.cron.d \
	kvsynopd.dirs \
	kvsynopd.install \
	kvsynopd.postinst.debhelper \
	kvsynopd.postrm.debhelper \
	postinst \
	postrm \
	preinst \
	prerm \
	README.Debian \
	rules \
	runbg \
	templates
